--- a/E-commerce-ASP/Views/Admin/Historique.cshtml
+++ b/E-commerce-ASP/Views/Admin/Historique.cshtml
@@ -13,45 +13,43 @@
 
 <main>
     <div class="container-fluid px-4">
-        <h1 class="mt-4">Historiques des Produits</h1>
-
-        <div class="card mb-4">
-
-        </div>
-
+        <h1 class="mt-4">Main DashBoard</h1>
+        <ol class="breadcrumb mb-4">
+            <li class="breadcrumb-item active">@E_commerce_ASP.Resources.Views.Admin.Admin.Shortcuts</li>
+        </ol>
         <div class="row">
             <div class="col-xl-3 col-md-6">
                 <div class="card bg-primary text-white mb-4">
-                    <div class="card-body">Products Logs</div>
+                    <div class="card-body">@E_commerce_ASP.Resources.Views.Admin.Admin.ProductLogs</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-white stretched-link" href="~/Admin/Historique">View Details</a>
+                        <a class="small text-white stretched-link" href="~/Admin/Historique">@E_commerce_ASP.Resources.Views.Admin.Admin.View_Details</a>
                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
             </div>
             <div class="col-xl-3 col-md-6">
                 <div class="card bg-warning text-white mb-4">
-                    <div class="card-body">User Details</div>
+                    <div class="card-body">@E_commerce_ASP.Resources.Views.Admin.Admin.UserDetails</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-white stretched-link" href="~/Admin/DashBoard">View Details</a>
+                        <a class="small text-white stretched-link" href="~/Admin/DashBoard">@E_commerce_ASP.Resources.Views.Admin.Admin.View_Details</a>
                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
             </div>
             <div class="col-xl-3 col-md-6">
                 <div class="card bg-success text-white mb-4">
-                    <div class="card-body">View Complaints</div>
+                    <div class="card-body">@E_commerce_ASP.Resources.Views.Admin.Admin.ViewComplaints</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-white stretched-link" href="~/Admin/ListeProbleme">View Details</a>
+                        <a class="small text-white stretched-link" href="~/Admin/ListeProbleme">@E_commerce_ASP.Resources.Views.Admin.Admin.View_Details</a>
                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
             </div>
             <div class="col-xl-3 col-md-6">
                 <div class="card bg-danger text-white mb-4">
-                    <div class="card-body">Back to E-shop</div>
+                    <div class="card-body">@E_commerce_ASP.Resources.Views.Admin.Admin.BacktoEshop</div>
                     <div class="card-footer d-flex align-items-center justify-content-between">
-                        <a class="small text-white stretched-link" href="~/Home/Index">View Details</a>
+                        <a class="small text-white stretched-link" href="~/Home/Index">@E_commerce_ASP.Resources.Views.Admin.Admin.View_Details</a>
                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                     </div>
                 </div>
@@ -64,26 +62,26 @@
         <div class="card mb-4">
             <div class="card-header">
                 <i class="fas fa-table me-1"></i>
-                Historique
+                @E_commerce_ASP.Resources.Views.Admin.Admin.Logs
             </div>
             <div class="card-body">
                 <table id="datatablesSimple">
                     <thead>
                         <tr>
-                            <th>id Produit</th>
-                            <th>Nom Produit</th>
-                            <th>Owner</th>
+                            <th>@E_commerce_ASP.Resources.Views.Admin.Admin.ProductID</th>
+                            <th>@E_commerce_ASP.Resources.Views.Admin.Admin.ProductName</th>
+                            <th>@E_commerce_ASP.Resources.Views.Admin.Admin.Owner</th>
                             <th>Date</th>
-                            <th>Modification</th>
+                            <th>@E_commerce_ASP.Resources.Views.Admin.Admin.Changes</th>
                         </tr>
                     </thead>
                     <tfoot>
                         <tr>
-                            <th>id Produit</th>
-                            <th>Nom Produit</th>
-                            <th>Propretaire</th>
+                            <th>@E_commerce_ASP.Resources.Views.Admin.Admin.ProductID</th>
+                            <th>@E_commerce_ASP.Resources.Views.Admin.Admin.ProductName</th>
+                            <th>@E_commerce_ASP.Resources.Views.Admin.Admin.Owner</th>
                             <th>Date</th>
-                            <th>Modification</th>
+                            <th>@E_commerce_ASP.Resources.Views.Admin.Admin.Changes</th>
                         </tr>
                     </tfoot>
                     <tbody>
